fix little spacing between projects on index page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -446,7 +446,7 @@ ul li{
 		width:33rem;
 		height:23rem;
 		background-color:white;
-		margin:1.3rem auto;
+		margin:1.7rem auto;
 		-webkit-transition: all 0.2s linear;
 	    -o-transition: all 0.2s linear;
 	    -moz-transition: all 0.2s linear;
@@ -505,7 +505,7 @@ ul li{
 		width:25rem;
 		height:18rem;
 		background-color:white;
-		margin:1rem auto;
+		margin:1.5rem auto;
 		-webkit-transition: all 0.2s linear;
 	    -o-transition: all 0.2s linear;
 	    -moz-transition: all 0.2s linear;
